--- a/index.html
+++ b/index.html
@@ -1,9 +1,7 @@
 <html>
 <meta charset="UTF-8"></meta>
-<script src="game.js"></script>
-<body onload="main();">
-<h1 id="counter1">Player 1 Points: 0</h1>
-<h1 id="counter2">Player 2 Points: 0</h1>
-<canvas id="game" width=500 height=500 style="border: 1px solid black; position: absolute; top: 50%; left: 50%; margin: -250px 0 0 -250px"></canvas>
+<body>
+<a href="squares">Squares</a>
+<a href="snake">Snake</a>
 </body>
 </html>
